[BE/FEAT] 11개의 position에 대한 원본 feedback횟수 response에 추가